<resources>
    <string name="app_name">Poké10</string>
    <string name="there_are_no_items_in_the_search_title">There are no items in the search!</string>
    <string name="there_are_no_items_in_the_search_subtitle">Redo the search with a valid name.</string>
    <string name="search">Search</string>
    <string name="unknow">\?</string>
    <string name="unhidden">Unhidden</string>
    <string name="hidden">Hidden</string>
    <string name="more_menu">More menu</string>
    <string name="favorite_pokemon_is_empty_title">There are no favorite pokemons!</string>
    <string name="favorite_pokemon_is_empty_subtitle">It is necessary to favorite some pokemon, to go back, click on the heart icon.</string>
    <string name="base_exp">Base Exp:</string>
    <string name="generation">Generation:</string>
    <string name="kg_lbs">"%1$s kg (%2$s lbs)"</string>
    <string name="m_inch">"%1$s m (%2$s″)"</string>
    <string name="shape">Shape:</string>
    <string name="capture_rate">Capture rate:</string>
    <string name="is_a_baby">IS A BABY!</string>
    <string name="habitat">Habitat</string>
    <string name="title_habitat">Habitat</string>
    <string name="title_encounters">Encounters</string>
    <string name="title_abilities">Abilities</string>
    <string name="title_text_entries">Registrations</string>
    <string name="title_egg_groups">Egg Groups</string>
    <string name="arrow">Arrow</string>
    <string name="title_damage">%1$s type damage</string>
    <string name="title_effective_damage_from">Effective damage from</string>
    <string name="title_effective_damage_to">Effective damage to</string>
    <string name="title_ineffective_damage_from">Ineffective damage from</string>
    <string name="title_ineffective_damage_to">Ineffective damage to</string>
    <string name="title_no_damage_from">No damage from</string>
    <string name="title_no_damage_to">No damage to</string>
    <string name="title_stats">Stats</string>
    <string name="toast_mythical">This is a Mythical pokemon!</string>
    <string name="toast_legendary">This is a legendary pokemon!</string>
    <string name="toast_baby">This is a baby pokemon!</string>
    <string name="is_general_error">Oops, there was an error!</string>
    <string name="is_timeout_error">Request is taking too long!</string>
    <string name="is_unknownhost_error">No connection, no server!</string>
    <string name="is_http_error">Server error response!</string>
    <string name="reloading">Reloading</string>
    <string name="loading">Loading</string>
    <string name="back">Back</string>
    <string name="ico_left">Ico Left</string>
    <string name="pikachu_sad">Pikachu Sad</string>
    <string name="pokemon_evolution">Pokemon evolution</string>
    <string name="ico_status_damage">Ico status damage</string>
    <string name="ico_type">Ico type</string>
    <string name="description">description</string>
</resources>
