<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardview_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="14dp"
            android:layout_marginVertical="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintlayout_custom_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="8dp">

                <ImageView
                    android:id="@+id/image_type"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="3dp"
                    android:src="@drawable/unknow"
                    app:layout_constraintBottom_toBottomOf="@+id/title_damage"
                    app:layout_constraintRight_toLeftOf="@+id/title_damage"
                    app:layout_constraintTop_toTopOf="@+id/title_damage" />

                <TextView
                    android:id="@+id/title_damage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="21dp"
                    android:text="@string/title_damage"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageview_arrow_custom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-21dp"
                    android:layout_marginEnd="14dp"
                    android:contentDescription="Arrow"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                    app:layout_constraintBottom_toBottomOf="@+id/title_damage"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/title_damage" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintlayout_custom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:paddingVertical="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageview_arrow_custom">

                    <ImageView
                        android:id="@+id/ico_effective_damage_from"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginEnd="3dp"
                        android:rotation="45"
                        android:src="@drawable/ic_negative_red"
                        app:layout_constraintBottom_toBottomOf="@+id/title_effective_damage_from"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/title_effective_damage_from"
                        app:layout_constraintTop_toTopOf="@+id/title_effective_damage_from" />

                    <TextView
                        android:id="@+id/title_effective_damage_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="5dp"
                        android:paddingVertical="5dp"
                        android:text="@string/title_effective_damage_from"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/recycler_effective_damage_from"
                        app:layout_constraintLeft_toRightOf="@+id/ico_effective_damage_from" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_effective_damage_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="14dp"
                        android:layout_marginVertical="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_effective_damage_from"
                        tools:itemCount="2"
                        tools:listitem="@layout/type_viewholder" />

                    <ImageView
                        android:id="@+id/ico_effective_damage_to"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginEnd="3dp"
                        android:src="@drawable/ic_positive_green"
                        app:layout_constraintBottom_toBottomOf="@+id/title_effective_damage_to"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/title_effective_damage_to"
                        app:layout_constraintTop_toTopOf="@+id/title_effective_damage_to" />

                    <TextView
                        android:id="@+id/title_effective_damage_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="8dp"
                        android:paddingVertical="5dp"
                        android:text="@string/title_effective_damage_to"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/recycler_effective_damage_to"
                        app:layout_constraintLeft_toRightOf="@+id/ico_effective_damage_to"
                        app:layout_constraintTop_toBottomOf="@+id/recycler_effective_damage_from" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_effective_damage_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="14dp"
                        android:layout_marginVertical="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_effective_damage_to"
                        tools:itemCount="2"
                        tools:listitem="@layout/type_viewholder" />

                    <ImageView
                        android:id="@+id/ico_ineffective_damage_from"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginEnd="3dp"
                        android:src="@drawable/ic_positive_green"
                        app:layout_constraintBottom_toBottomOf="@+id/title_ineffective_damage_from"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/title_ineffective_damage_from"
                        app:layout_constraintTop_toTopOf="@+id/title_ineffective_damage_from" />

                    <TextView
                        android:id="@+id/title_ineffective_damage_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="8dp"
                        android:paddingVertical="5dp"
                        android:text="@string/title_ineffective_damage_from"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/recycler_ineffective_damage_from"
                        app:layout_constraintLeft_toRightOf="@+id/ico_ineffective_damage_from"
                        app:layout_constraintTop_toBottomOf="@+id/recycler_effective_damage_to" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_ineffective_damage_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="14dp"
                        android:layout_marginVertical="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_ineffective_damage_from"
                        tools:itemCount="2"
                        tools:listitem="@layout/type_viewholder" />

                    <ImageView
                        android:id="@+id/ico_ineffective_damage_to"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginEnd="3dp"
                        android:rotation="45"
                        android:src="@drawable/ic_negative_red"
                        app:layout_constraintBottom_toBottomOf="@+id/title_ineffective_damage_to"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/title_ineffective_damage_to"
                        app:layout_constraintTop_toTopOf="@+id/title_ineffective_damage_to" />

                    <TextView
                        android:id="@+id/title_ineffective_damage_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="8dp"
                        android:paddingVertical="5dp"
                        android:text="@string/title_ineffective_damage_to"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/recycler_ineffective_damage_to"
                        app:layout_constraintLeft_toRightOf="@+id/ico_ineffective_damage_to"
                        app:layout_constraintTop_toBottomOf="@+id/recycler_ineffective_damage_from" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_ineffective_damage_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="14dp"
                        android:layout_marginVertical="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_ineffective_damage_to"
                        tools:itemCount="2"
                        tools:listitem="@layout/type_viewholder" />

                    <ImageView
                        android:id="@+id/ico_no_damage_from"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginEnd="3dp"
                        android:src="@drawable/ic_positive_green"
                        app:layout_constraintBottom_toBottomOf="@+id/title_no_damage_from"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/title_no_damage_from"
                        app:layout_constraintTop_toTopOf="@+id/title_no_damage_from" />

                    <TextView
                        android:id="@+id/title_no_damage_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="8dp"
                        android:paddingVertical="5dp"
                        android:text="@string/title_no_damage_from"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/recycler_no_damage_from"
                        app:layout_constraintLeft_toRightOf="@+id/ico_no_damage_from"
                        app:layout_constraintTop_toBottomOf="@+id/recycler_ineffective_damage_to" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_no_damage_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="14dp"
                        android:layout_marginVertical="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_no_damage_from"
                        tools:itemCount="2"
                        tools:listitem="@layout/type_viewholder" />

                    <ImageView
                        android:id="@+id/ico_no_damage_to"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginEnd="3dp"
                        android:rotation="45"
                        android:src="@drawable/ic_negative_red"
                        app:layout_constraintBottom_toBottomOf="@+id/title_no_damage_to"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/title_no_damage_to"
                        app:layout_constraintTop_toTopOf="@+id/title_no_damage_to" />

                    <TextView
                        android:id="@+id/title_no_damage_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="8dp"
                        android:paddingVertical="5dp"
                        android:text="@string/title_no_damage_to"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/recycler_no_damage_to"
                        app:layout_constraintLeft_toRightOf="@+id/ico_no_damage_to"
                        app:layout_constraintTop_toBottomOf="@+id/recycler_no_damage_from" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_no_damage_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="14dp"
                        android:layout_marginVertical="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title_no_damage_to"
                        tools:itemCount="2"
                        tools:listitem="@layout/type_viewholder" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
